--- a/src/app/assets/styles/base/base.css
+++ b/src/app/assets/styles/base/base.css
@@ -30,3 +30,16 @@
         @apply text-xl
     }
 }
+
+
+/* HomePageView */
+
+.recherche {
+    background-color: #f8c6c38f;
+}
+
+.pub {
+    /* background-size: cover; */
+    /* background-image: linear-gradient(rgba(51, 189, 46, 0.399), rgba(42, 166, 65, 0.738)), url("../images/bggradient.svg"); */
+    background-color: #14ae5cb5;
+}
