--- a/src/app/assets/styles/base/base.css
+++ b/src/app/assets/styles/base/base.css
@@ -31,6 +31,10 @@
     }
 }
 
+/* body{
+    background: rgb(61,177,113);
+background: linear-gradient(22deg, rgba(61,177,113,1) 0%, rgba(52,150,96,1) 35%, rgba(239,187,184,1) 85%, rgba(255,203,200,1) 95%);
+} */
 
 .lienhover {
     display: inline-block;
