--- a/src/app/assets/styles/components/input.css
+++ b/src/app/assets/styles/components/input.css
@@ -4,6 +4,12 @@
     focus:outline-none focus:ring-primary focus:border-primary focus:z-20 sm:text-sm
 }
 
+.inputInscription{
+    @apply appearance-none relative block w-full px-3 py-2 
+    border border-gray-300 bg-white bg-opacity-30 placeholder-gray-500 text-gray-900 rounded-md 
+    focus:outline-none focus:ring-roseh focus:border-rose focus:z-20 sm:text-sm drop-shadow-md
+}
+
 .input-error {
     @apply ring-red-500 border-red-500 focus:ring-red-500 focus:border-red-500 z-10 placeholder-red-500
 }
