push preparation/ styling login / recuperating userName

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,3 @@
-.loginContainer {
-    // background-color: green;
-}
-
+// .loginContainer {
+//     background-image: url('./assets/images/GradientLogin.png');
+// }
