--- a/src/app/assets/styles/components/input.css
+++ b/src/app/assets/styles/components/input.css
@@ -6,8 +6,8 @@
 
 .inputInscription{
     @apply appearance-none relative block w-full px-3 py-2 
-    border border-gray-300 bg-white bg-opacity-30 placeholder-gray-500 text-gray-900 rounded-md 
-    focus:outline-none focus:ring-roseh focus:border-rose focus:z-20 sm:text-sm drop-shadow-md
+    border border-gray-300 bg-white bg-opacity-30 placeholder-gray-900 text-gray-900 rounded-md 
+    focus:outline-none focus:ring-roseh focus:border-cyan-300 focus:z-20 sm:text-sm drop-shadow-md
 }
 
 .input-error {
