--- a/src/app/assets/styles/index.css
+++ b/src/app/assets/styles/index.css
@@ -7,7 +7,27 @@
 @tailwind utilities;
 
 
-
+@layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-track {
+      border-radius: 100vh;
+      background: #00000000;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb {
+      background: #000000;
+      border-radius: 100vh;
+      border: 3px solid #00000000;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #000000;
+    }
+  }
 
 /* ANIMATION CSS */
 .anim-delay-100{
