ajout custom input recherche trajet map

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,7 @@
 // .loginContainer {
 //     background-image: url('./assets/images/GradientLogin.png');
 // }
+
+.leaflet-routing-container{
+    display: none;
+}
